java/python/JavaLangParser.py
# Generated from JavaLang.g4 by ANTLR 4.6
# encoding: utf-8
from antlr4 import *
from io import StringIO



class JavaLangParser ( Parser ):

    grammarFileName = "JavaLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'package'", "';'", "'import'", "'static'", 
                     "'.'", "'*'", "'class'", "'extends'", "'implements'", 
                     "'public'", "'protected'", "'private'", "'abstract'", 
                     "'final'", "'strictfp'", "'<'", "','", "'>'", "'&'", 
                     "'{'", "'}'", "'interface'", "'['", "']'", "'void'", 
                     "'throws'", "'='", "'native'", "'synchronized'", "'transient'", 
                     "'volatile'", "'boolean'", "'char'", "'byte'", "'short'", 
                     "'int'", "'long'", "'float'", "'double'", "'?'", "'super'", 
                     "'('", "')'", "'...'", "'this'", "'null'", "'true'", 
                     "'false'", "'@'", "'default'", "':'", "'if'", "'else'", 
                     "'for'", "'while'", "'do'", "'try'", "'finally'", "'switch'", 
                     "'return'", "'throw'", "'break'", "'continue'", "'catch'", 
                     "'case'", "'new'", "'++'", "'--'", "'+'", "'-'", "'~'", 
                     "'!'", "'/'", "'%'", "'instanceof'", "'=='", "'!='", 
                     "'^'", "'|'", "'&&'", "'||'", "'^='", "'+='", "'-='", 
                     "'*='", "'/='", "'&='", "'|='", "'%='", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'enum'", "'assert'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "HexLiteral", "DecimalLiteral", 
                      "OctalLiteral", "FloatingPointLiteral", "CharacterLiteral", 
                      "StringLiteral", "ENUM", "ASSERT", "Identifier", "COMMENT", 
                      "WS", "LINE_COMMENT" ]

    RULE_compilationUnit = 0
    RULE_packageDeclaration = 1
    RULE_importDeclaration = 2
    RULE_typeDeclaration = 3
    RULE_classDeclaration = 4
    RULE_enumDeclaration = 5
    RULE_interfaceDeclaration = 6
    RULE_classOrInterfaceModifier = 7
    RULE_modifiers = 8
    RULE_typeParameters = 9
    RULE_typeParameter = 10
    RULE_typeBound = 11
    RULE_enumBody = 12
    RULE_enumConstants = 13
    RULE_enumConstant = 14
    RULE_enumBodyDeclarations = 15
    RULE_normalInterfaceDeclaration = 16
    RULE_typeList = 17
    RULE_classBody = 18
    RULE_interfaceBody = 19
    RULE_classBodyDeclaration = 20
    RULE_member = 21
    RULE_methodDeclaration = 22
    RULE_methodDeclarationRest = 23
    RULE_genericMethodDeclaration = 24
    RULE_fieldDeclaration = 25
    RULE_constructorDeclaration = 26
    RULE_interfaceBodyDeclaration = 27
    RULE_interfaceMemberDecl = 28
    RULE_interfaceMethodOrFieldDecl = 29
    RULE_interfaceMethodOrFieldRest = 30
    RULE_voidMethodDeclaratorRest = 31
    RULE_interfaceMethodDeclaratorRest = 32
    RULE_interfaceGenericMethodDecl = 33
    RULE_voidInterfaceMethodDeclaratorRest = 34
    RULE_constantDeclarator = 35
    RULE_variableDeclarators = 36
    RULE_variableDeclarator = 37
    RULE_constantDeclaratorsRest = 38
    RULE_constantDeclaratorRest = 39
    RULE_variableDeclaratorId = 40
    RULE_variableInitializer = 41
    RULE_arrayInitializer = 42
    RULE_modifier = 43
    RULE_packageOrTypeName = 44
    RULE_enumConstantName = 45
    RULE_typeName = 46
    RULE_entityType = 47
    RULE_classOrInterfaceType = 48
    RULE_primitiveType = 49
    RULE_variableModifier = 50
    RULE_typeArguments = 51
    RULE_typeArgument = 52
    RULE_qualifiedNameList = 53
    RULE_formalParameters = 54
    RULE_formalParameterDecls = 55
    RULE_formalParameterDeclsRest = 56
    RULE_methodBody = 57
    RULE_constructorBody = 58
    RULE_explicitConstructorInvocation = 59
    RULE_qualifiedName = 60
    RULE_literal = 61
    RULE_integerLiteral = 62
    RULE_booleanLiteral = 63
    RULE_annotations = 64
    RULE_annotation = 65
    RULE_annotationName = 66
    RULE_elementValuePairs = 67
    RULE_elementValuePair = 68
    RULE_elementValue = 69
    RULE_elementValueArrayInitializer = 70
    RULE_annotationTypeDeclaration = 71
    RULE_annotationTypeBody = 72
    RULE_annotationTypeElementDeclaration = 73
    RULE_annotationTypeElementRest = 74
    RULE_annotationMethodOrConstantRest = 75
    RULE_annotationMethodRest = 76
    RULE_annotationConstantRest = 77
    RULE_defaultValue = 78
    RULE_block = 79
    RULE_blockStatement = 80
    RULE_localVariableDeclarationStatement = 81
    RULE_localVariableDeclaration = 82
    RULE_variableModifiers = 83
    RULE_statement = 84
    RULE_catches = 85
    RULE_catchClause = 86
    RULE_formalParameter = 87
    RULE_switchBlock = 88
    RULE_switchBlockStatementGroup = 89
    RULE_switchLabel = 90
    RULE_forControl = 91
    RULE_forInit = 92
    RULE_enhancedForControl = 93
    RULE_forUpdate = 94
    RULE_parExpression = 95
    RULE_expressionList = 96
    RULE_statementExpression = 97
    RULE_constantExpression = 98
    RULE_expression = 99
    RULE_primary = 100
    RULE_creator = 101
    RULE_createdName = 102
    RULE_innerCreator = 103
    RULE_explicitGenericInvocation = 104
    RULE_arrayCreatorRest = 105
    RULE_classCreatorRest = 106
    RULE_nonWildcardTypeArguments = 107
    RULE_arguments = 108

    ruleNames =  [ "compilationUnit", "packageDeclaration", "importDeclaration", 
                   "typeDeclaration", "classDeclaration", "enumDeclaration", 
                   "interfaceDeclaration", "classOrInterfaceModifier", "modifiers", 
                   "typeParameters", "typeParameter", "typeBound", "enumBody", 
                   "enumConstants", "enumConstant", "enumBodyDeclarations", 
                   "normalInterfaceDeclaration", "typeList", "classBody", 
                   "interfaceBody", "classBodyDeclaration", "member", "methodDeclaration", 
                   "methodDeclarationRest", "genericMethodDeclaration", 
                   "fieldDeclaration", "constructorDeclaration", "interfaceBodyDeclaration", 
                   "interfaceMemberDecl", "interfaceMethodOrFieldDecl", 
                   "interfaceMethodOrFieldRest", "voidMethodDeclaratorRest", 
                   "interfaceMethodDeclaratorRest", "interfaceGenericMethodDecl", 
                   "voidInterfaceMethodDeclaratorRest", "constantDeclarator", 
                   "variableDeclarators", "variableDeclarator", "constantDeclaratorsRest", 
                   "constantDeclaratorRest", "variableDeclaratorId", "variableInitializer", 
                   "arrayInitializer", "modifier", "packageOrTypeName", 
                   "enumConstantName", "typeName", "entityType", "classOrInterfaceType", 
                   "primitiveType", "variableModifier", "typeArguments", 
                   "typeArgument", "qualifiedNameList", "formalParameters", 
                   "formalParameterDecls", "formalParameterDeclsRest", "methodBody", 
                   "constructorBody", "explicitConstructorInvocation", "qualifiedName", 
                   "literal", "integerLiteral", "booleanLiteral", "annotations", 
                   "annotation", "annotationName", "elementValuePairs", 
                   "elementValuePair", "elementValue", "elementValueArrayInitializer", 
                   "annotationTypeDeclaration", "annotationTypeBody", "annotationTypeElementDeclaration", 
                   "annotationTypeElementRest", "annotationMethodOrConstantRest", 
                   "annotationMethodRest", "annotationConstantRest", "defaultValue", 
                   "block", "blockStatement", "localVariableDeclarationStatement", 
                   "localVariableDeclaration", "variableModifiers", "statement", 
                   "catches", "catchClause", "formalParameter", "switchBlock", 
                   "switchBlockStatementGroup", "switchLabel", "forControl", 
                   "forInit", "enhancedForControl", "forUpdate", "parExpression", 
                   "expressionList", "statementExpression", "constantExpression", 
                   "expression", "primary", "creator", "createdName", "innerCreator", 
                   "explicitGenericInvocation", "arrayCreatorRest", "classCreatorRest", 
                   "nonWildcardTypeArguments", "arguments" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    HexLiteral=90
    DecimalLiteral=91
    OctalLiteral=92
    FloatingPointLiteral=93
    CharacterLiteral=94
    StringLiteral=95
    ENUM=96
    ASSERT=97
    Identifier=98
    COMMENT=99
    WS=100
    LINE_COMMENT=101

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class CompilationUnitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(JavaLangParser.EOF, 0)

        def packageDeclaration(self):
            return self.getTypedRuleContext(JavaLangParser.PackageDeclarationContext,0)


        def importDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaLangParser.ImportDeclarationContext)
            else:
                return self.getTypedRuleContext(JavaLangParser.ImportDeclarationContext,i)


        def typeDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaLangParser.TypeDeclarationContext)
            else:
                return self.getTypedRuleContext(JavaLangParser.TypeDeclarationContext,i)


        def getRuleIndex(self):
            return JavaLangParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)




    def compilationUnit(self):

        localctx = JavaLangParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 219
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JavaLangParser.T__0:
                self.state = 218
                self.packageDeclaration()


            self.state = 224
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==JavaLangParser.T__2:
                self.state = 221
                self.importDeclaration()
                self.state = 226
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 230
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JavaLangParser.T__1) | (1 << JavaLangParser.T__3) | (1 << JavaLangParser.T__6) | (1 << JavaLangParser.T__9) | (1 << JavaLangParser.T__10) | (1 << JavaLangParser.T__11) | (1 << JavaLangParser.T__12) | (1 << JavaLangParser.T__13) | (1 << JavaLangParser.T__14) | (1 << JavaLangParser.T__21) | (1 << JavaLangParser.T__48))) != 0) or _la==JavaLangParser.ENUM:
                self.state = 227
                self.typeDeclaration()
                self.state = 232
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 233
            self.match(JavaLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PackageDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qualifiedName(self):
            return self.getTypedRuleContext(JavaLangParser.QualifiedNameContext,0)


        def getRuleIndex(self):
            return JavaLangParser.RULE_packageDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageDeclaration" ):
                listener.enterPackageDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageDeclaration" ):
                listener.exitPackageDeclaration(self)




    def packageDeclaration(self):

        localctx = JavaLangParser.PackageDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_packageDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 235
            self.match(JavaLangParser.T__0)
            self.state = 236
            self.qualifiedName()
            self.state = 237
            self.match(JavaLangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImportDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qualifiedName(self):
            return self.getTypedRuleContext(JavaLangParser.QualifiedNameContext,0)


        def getRuleIndex(self):
            return JavaLangParser.RULE_importDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportDeclaration" ):
                listener.enterImportDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportDeclaration" ):
                listener.exitImportDeclaration(self)




    def importDeclaration(self):

        localctx = JavaLangParser.ImportDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 239
            self.match(JavaLangParser.T__2)
            self.state = 241
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JavaLangParser.T__3:
                self.state = 240
                self.match(JavaLangParser.T__3)


            self.state = 243
            self.qualifiedName()
            self.state = 246
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JavaLangParser.T__4:
                self.state = 244
                self.match(JavaLangParser.T__4)
                self.state = 245
                self.match(JavaLangParser.T__5)

